change path to reveal

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <style type="text/css">
 .underline { text-decoration: underline; }
 </style>
-<link rel="stylesheet" href="http://cdn.jsdelivr.net/reveal.js/3.0.0/css/reveal.css"/>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js/css/reveal.css"/>
 
-<link rel="stylesheet" href="http://cdn.jsdelivr.net/reveal.js/3.0.0/css/theme/black.css" id="theme"/>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js/css/theme/black.css" id="theme"/>
 
 <link rel="stylesheet" href="mod.css"/>
 
@@ -19,7 +19,7 @@
         var link = document.createElement( 'link' );
         link.rel = 'stylesheet';
         link.type = 'text/css';
-        link.href = 'http://cdn.jsdelivr.net/reveal.js/3.0.0/css/print/pdf.css';
+        link.href = 'https://cdn.jsdelivr.net/npm/reveal.js/css/print/pdf.css';
         document.getElementsByTagName( 'head' )[0].appendChild( link );
     }
 </script>
@@ -34,37 +34,37 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#/slide-org237c260">Introduction</a>
+<li><a href="#/slide-org1d1b451">Introduction</a>
 <ul>
-<li><a href="#/slide-orgb920ec8">What is involved in AI</a></li>
-<li><a href="#/slide-orgb727c50">General Intelligence</a></li>
-<li><a href="#/slide-org8ae8457">AI vs. machine learning vs. deep learning</a></li>
-<li><a href="#/slide-org5717312">Some real world applications</a></li>
-<li><a href="#/slide-org733e0b5">Highlights</a></li>
+<li><a href="#/slide-org326cdfe">What is involved in AI</a></li>
+<li><a href="#/slide-org4e499d0">General Intelligence</a></li>
+<li><a href="#/slide-org1b66da9">AI vs. machine learning vs. deep learning</a></li>
+<li><a href="#/slide-org2b03940">Some real world applications</a></li>
+<li><a href="#/slide-org9de6ef0">Highlights</a></li>
 </ul>
 </li>
-<li><a href="#/slide-orgb16c686">Machine learning</a></li>
-<li><a href="#/slide-orgff4b701">Essentials of traditional ML</a>
+<li><a href="#/slide-org23f3a37">Machine learning</a></li>
+<li><a href="#/slide-org3c5a24e">Essentials of traditional ML</a>
 <ul>
-<li><a href="#/slide-orge3a7b57">A few well-known problem categories</a></li>
+<li><a href="#/slide-org3f54759">A few well-known problem categories</a></li>
 </ul>
 </li>
-<li><a href="#/slide-org2c86176">Artificial Neural Networks (ANN)</a>
+<li><a href="#/slide-org65af647">Artificial Neural Networks (ANN)</a>
 <ul>
-<li><a href="#/slide-orgf525260">Performance vs. Data (from Andrew Ng)</a></li>
-<li><a href="#/slide-orge1116ca">Validation</a></li>
-<li><a href="#/slide-org2fa4710">Gold standard</a></li>
+<li><a href="#/slide-orgb5fe0dc">Performance vs. Data (from Andrew Ng)</a></li>
+<li><a href="#/slide-orgdeff83b">Validation</a></li>
+<li><a href="#/slide-orgd00b03a">Gold standard</a></li>
 </ul>
 </li>
-<li><a href="#/slide-org12ecdd0">Deep learning</a></li>
+<li><a href="#/slide-org53f353d">Deep learning</a></li>
 </ul>
 </div>
 </div>
 </section>
 
 <section>
-<section id="slide-org237c260">
-<h2 id="org237c260">Introduction</h2>
+<section id="slide-org1d1b451">
+<h2 id="org1d1b451">Introduction</h2>
 <p>
 <b>Intelligence:</b> 
 </p>
@@ -95,8 +95,8 @@ AI is the new electricity. (Andrew Ng, Stanford University.)
 </blockquote>
 
 </section>
-<section id="slide-orgb920ec8">
-<h3 id="orgb920ec8">What is involved in AI</h3>
+<section id="slide-org326cdfe">
+<h3 id="org326cdfe">What is involved in AI</h3>
 <div class="column" style="float:left; width:50%">
 <ul>
 <li class="fragment appear">Perception
@@ -122,8 +122,8 @@ AI is the new electricity. (Andrew Ng, Stanford University.)
 <iframe width="450" height="315" src="https://www.youtube.com/embed/fRj34o4hN4I" frameborder="0" allowfullscreen></iframe>
 </div>
 </section>
-<section id="slide-orgb727c50">
-<h3 id="orgb727c50">General Intelligence</h3>
+<section id="slide-org4e499d0">
+<h3 id="org4e499d0">General Intelligence</h3>
 <div class="column" style="float:left; width:50%">
 <ul>
 <li><b>Turing Test:</b> Can machines think? (A. Turing 1950) Can a machine show intelligent behavior indistinguishable from that of a human?</li>
@@ -149,8 +149,8 @@ AI is the new electricity. (Andrew Ng, Stanford University.)
 </div>
 
 </section>
-<section id="slide-org8ae8457">
-<h3 id="org8ae8457">AI vs. machine learning vs. deep learning</h3>
+<section id="slide-org1b66da9">
+<h3 id="org1b66da9">AI vs. machine learning vs. deep learning</h3>
 
 <div class="figure">
 <p><img src="./assets/AI_vs_etc.png" alt="AI_vs_etc.png" />
@@ -158,8 +158,8 @@ AI is the new electricity. (Andrew Ng, Stanford University.)
 </div>
 
 </section>
-<section id="slide-org5717312">
-<h3 id="org5717312">Some real world applications</h3>
+<section id="slide-org2b03940">
+<h3 id="org2b03940">Some real world applications</h3>
 <div class="column" style="float:left; width:50%">
 <p>
 Autonomous driving
@@ -200,8 +200,8 @@ Transit scheduling
 </div>
 
 </section>
-<section id="slide-org733e0b5">
-<h3 id="org733e0b5">Highlights</h3>
+<section id="slide-org9de6ef0">
+<h3 id="org9de6ef0">Highlights</h3>
 <ul>
 <li>First computer learning program (Samuel, 1952)</li>
 <li>First neural network (Rosenblatt, 1957)</li>
@@ -221,8 +221,8 @@ Transit scheduling
 </section>
 </section>
 <section>
-<section id="slide-orgb16c686">
-<h2 id="orgb16c686">Machine learning</h2>
+<section id="slide-org23f3a37">
+<h2 id="org23f3a37">Machine learning</h2>
 <div class="column" style="float:right; width:40%">
 
 <div class="figure">
@@ -257,8 +257,8 @@ The process of extracting <i><i><span class="underline">patterns</span></i></i> 
 </section>
 </section>
 <section>
-<section id="slide-orgff4b701">
-<h2 id="orgff4b701">Essentials of traditional ML</h2>
+<section id="slide-org3c5a24e">
+<h2 id="org3c5a24e">Essentials of traditional ML</h2>
 <ul>
 <li class="fragment appear">A <i><i><span class="underline">fair</span></i></i> dataset.</li>
 <li class="fragment appear">Tools and methods, which highligh attributes that are relevant to the task, e.g., edges of an image for simplifying shapes or keywords from a text document. These are called <i><i><span class="underline">feature extractors</span></i></i></li>
@@ -268,8 +268,8 @@ The process of extracting <i><i><span class="underline">patterns</span></i></i> 
 
 </ul>
 </section>
-<section id="slide-orge3a7b57">
-<h3 id="orge3a7b57">A few well-known problem categories</h3>
+<section id="slide-org3f54759">
+<h3 id="org3f54759">A few well-known problem categories</h3>
 <p>
 <br>
 </p>
@@ -294,8 +294,8 @@ The process of extracting <i><i><span class="underline">patterns</span></i></i> 
 </section>
 </section>
 <section>
-<section id="slide-org2c86176">
-<h2 id="org2c86176">Artificial Neural Networks (ANN)</h2>
+<section id="slide-org65af647">
+<h2 id="org65af647">Artificial Neural Networks (ANN)</h2>
 <div class="column" style="float:left; width: 50%">
 <p>
 A mathematical framework that is inspired by the biological neural networks.
@@ -322,8 +322,8 @@ A mathematical framework that is inspired by the biological neural networks.
 </div>
 </div>
 </section>
-<section id="slide-orgf525260">
-<h3 id="orgf525260">Performance vs. Data (from Andrew Ng)</h3>
+<section id="slide-orgb5fe0dc">
+<h3 id="orgb5fe0dc">Performance vs. Data (from Andrew Ng)</h3>
 
 <div class="figure">
 <p><img src="./assets/curves.png" alt="curves.png" width="70%" height="90%" />
@@ -331,8 +331,8 @@ A mathematical framework that is inspired by the biological neural networks.
 </div>
 
 </section>
-<section id="slide-orge1116ca">
-<h3 id="orge1116ca">Validation</h3>
+<section id="slide-orgdeff83b">
+<h3 id="orgdeff83b">Validation</h3>
 <ul>
 <li>Divide the dataset into 3 groups: train, validation, test.
 <ul>
@@ -359,8 +359,8 @@ A mathematical framework that is inspired by the biological neural networks.
 </ul>
 
 </section>
-<section id="slide-org2fa4710">
-<h3 id="org2fa4710">Gold standard</h3>
+<section id="slide-orgd00b03a">
+<h3 id="orgd00b03a">Gold standard</h3>
 <ul>
 <li class="fragment appear">Q: Ultimately, a model wants to reach the performance of humans, but how do you define <i><i><font color="yellow"> human level performance</font></i></i>, e.g., in medical image interpretation?
 <ul>
@@ -382,8 +382,8 @@ A mathematical framework that is inspired by the biological neural networks.
 </section>
 </section>
 <section>
-<section id="slide-org12ecdd0">
-<h2 id="org12ecdd0">Deep learning</h2>
+<section id="slide-org53f353d">
+<h2 id="org53f353d">Deep learning</h2>
 <ul>
 <li>If there is "unlimited" amounts of data and processing power with "unlimited" memory, there is no need to write programs to extract patterns in the data.
 <ul>
@@ -403,8 +403,8 @@ A mathematical framework that is inspired by the biological neural networks.
 </section>
 </div>
 </div>
-<script src="http://cdn.jsdelivr.net/reveal.js/3.0.0/lib/js/head.min.js"></script>
-<script src="http://cdn.jsdelivr.net/reveal.js/3.0.0/js/reveal.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/reveal.js/lib/js/head.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/reveal.js/js/reveal.js"></script>
 
 <script>
 // Full list of configuration options available here:
@@ -432,11 +432,11 @@ multiplex: {
 
 // Optional libraries used to extend on reveal.js
 dependencies: [
- { src: 'http://cdn.jsdelivr.net/reveal.js/3.0.0/lib/js/classList.js', condition: function() { return !document.body.classList; } },
- { src: 'http://cdn.jsdelivr.net/reveal.js/3.0.0/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
- { src: 'http://cdn.jsdelivr.net/reveal.js/3.0.0/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
- { src: 'http://cdn.jsdelivr.net/reveal.js/3.0.0/plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
- { src: 'http://cdn.jsdelivr.net/reveal.js/3.0.0/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }]
+ { src: 'https://cdn.jsdelivr.net/npm/reveal.js/lib/js/classList.js', condition: function() { return !document.body.classList; } },
+ { src: 'https://cdn.jsdelivr.net/npm/reveal.js/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+ { src: 'https://cdn.jsdelivr.net/npm/reveal.js/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+ { src: 'https://cdn.jsdelivr.net/npm/reveal.js/plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
+ { src: 'https://cdn.jsdelivr.net/npm/reveal.js/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }]
 });
 </script>
 </body>
